# theia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh
.github/workflows/: contract.yml  core.yml  panel.yml  plugin.yml  preview.yml  release.yml
docs/: build-pipeline.md  demo-script.md  integration.md  quick-start.md  troubleshooting.md  updating.md  usage.md
docs/superpowers/specs/: 2026-04-21-theia-design.md
examples/: dashboard.html  graph.json  hermes_graph.json
examples/sessions/: sess_alpha.json  sess_beta.json  sess_gamma.json
plugin/: manifest.json
plugin/api/: graph_builder.py  graph_data.py  graph_edges.py  graph_projection.py  graph_utils.py  plugin_api.py
plugin/src/: index.js  style.css
schemas/: graph.schema.json
theia-core/: pyproject.toml
theia-core/tests/: db_helpers.py  test_cli.py  test_cron.py  test_cross_search.py  test_emit.py  test_features.py  test_golden.py  test_ingest.py  test_ingest_jsonl.py  test_memory_share.py  test_project.py  test_tool_overlap.py  test_watch.py
theia-core/tests/fixtures/golden_sessions/: sess_beta.json
theia-core/theia_core/: __main__.py  emit.py  features.py  ingest.py  project.py  watch.py
theia-core/theia_core/detect/: __init__.py  cron.py  cross_search.py  memory_share.py  subagent.py  tool_overlap.py  topology.py
theia-panel/: index.html  package-lock.json  package.json  tsconfig.json  vite-plugin-theia-watcher.ts  vite.config.embed.ts  vite.config.ts
theia-panel/public/: graph.json
theia-panel/src/: aesthetic.ts  d3-force-3d.d.ts  index.ts
(+28 files in other folders)
